--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ gradio = ">=4.19"
 nncf = ">=2.6.0"
 torch = ">=2.1"
 lancedb = "^0.14.0"
+watchdog = "^5.0.3"
+pypdf = "^5.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
